fix overflow of long links in Content blocks

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -299,6 +299,7 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  overflow-wrap: break-word;
 }
 pre {
   margin-left: 0;
